WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311375
macCatalyst build failure in WKVisibilityPropagationView
https://bugs.webkit.org/show_bug.cgi?id=311375
Summary
macCatalyst build failure in WKVisibilityPropagationView
Tim Horton
Reported
2026-04-02 16:22:26 PDT
macCatalyst build failure in WKVisibilityPropagationView
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-02 16:22:33 PDT
<
rdar://problem/173972460
>
Tim Horton
Comment 2
2026-04-02 16:25:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61937
EWS
Comment 3
2026-04-02 16:28:07 PDT
Committed
310479@main
(fb284a4c47a7): <
https://commits.webkit.org/310479@main
> Reviewed commits have been landed. Closing PR #61937 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug