macCatalyst build failure in WKVisibilityPropagationView https://bugs.webkit.org/show_bug.cgi?id=311375 rdar://173972460

Unreviewed build fix.

* Source/WebKit/UIProcess/ios/WKVisibilityPropagationView.mm:

Canonical link: https://commits.webkit.org/310479@main